<resources>
    <string name="app_name">Calorit</string>
    <string name="username_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="sign_up_username_hint">Email (at least 20 characters)</string>
    <string name="sign_up_password_hint">Password (at least 10 characters)</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="create_account_btn">Create Account</string>
    <string name="login_prefs">edu.uw.tacoma.team5.calorit.prefs</string>
    <string name="loggedin">loggedin</string>
    <string name="loggedin_email">loggedin_email</string>
    <string name="cal_left">cal_left</string>
    <string name="title_activity_home">Home</string>
    <string name="logout">Log out</string>
    <string name="logout_dialog_message">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="height_feet_label">Height in feet: </string>
    <string name="height_feet_prompt">Please enter your feet</string>
    <string name="height_inches_label">Height in inches: </string>
    <string name="height_inches_prompt">Please enter your inches</string>
    <string name="weight_label">Weight: </string>
    <string name="weight_prompt">Please enter your weight</string>
    <string name="age_label">Age: </string>
    <string name="age_prompt">Please enter your age</string>
    <string name="gender_label">Gender: </string>
    <string name="gender_male_label">M</string>
    <string name="gender_female_label">F</string>
    <string name="save_body_info_btn_text">Save</string>
    <string name="calories_left_textview">Calories Left</string>
    <string name="enter_meal_btn">Enter Meal</string>
    <string name="meal_log_btn">Meal Log</string>
    <string name="edit_body_info_btn">Edit Body Info</string>

    <string name="food_category_carbohydrate">Carbohydrates</string>
    <string name="food_category_fruit_veggie">Fruits and Veggies</string>
    <string name="food_category_dairy">Dairy</string>
    <string name="food_category_meat">Meat</string>
    <string name="food_category_sweet">Sweets</string>
    <string name="food_category_snack">Snacks</string>
    <string name="done_btn">Done</string>
    <string name="confirm_btn">Confirm</string>
    <string name="undo_btn">Undo</string>
    <string name="exercise_checkbox">Have you exercised today?</string>
</resources>
