<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uw.tacoma.team5.calorit.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/sign_up_username"
        android:hint="@string/username_hint"
        android:fontFamily="serif"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorWhite"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/sign_up_password"
        android:hint="@string/password_hint"
        android:fontFamily="serif"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/sign_up_confirm_password"
        android:hint="@string/confirm_password_hint"
        android:fontFamily="serif"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/create_account_btn"
        android:text="@string/create_account_btn"/>
</LinearLayout>
